--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   firebase_core: ^3.15.1
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
+  geolocator_android: 4.6.1
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  permission_handler: ^11.3.1
+
 
 dev_dependencies:
   flutter_test:
