--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_foreground_task: ^6.1.2
+  workmanager: ^0.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,6 +45,10 @@ dependencies:
   geolocator: ^13.0.1
   geocoding: ^3.0.0
   permission_handler: ^11.3.1
+  location: ^6.0.1
+  web_socket_channel: ^3.0.1
+  flutter_local_notifications: ^17.0.0
+  flutter_background_service: ^5.0.7
 
 
 dev_dependencies:
