--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   geolocator: ^13.0.1
   geocoding: ^3.0.0
   permission_handler: ^11.3.1
+  http: ^1.1.0
+  provider: ^6.1.1
 
 
 dev_dependencies:
