--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   permission_handler: ^11.3.1
   http: ^1.1.0
   provider: ^6.1.1
+  vietmap_flutter_gl: ^4.0.1
+
+
 
 
 dev_dependencies:
