--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
+  webview_flutter: ^4.4.2
+  vietmap_flutter_gl: ^4.0.1
+  vietmap_flutter_plugin: ^0.4.0
   firebase_core: ^3.15.1
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
@@ -45,7 +48,7 @@ dependencies:
   permission_handler: ^11.3.1
   http: ^1.1.0
   provider: ^6.1.1
-  vietmap_flutter_gl: ^4.0.1
+
 
 
 
