--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/booking/
+    - assets/images/booking/motorcycle.png
     - assets/icon/app_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
